[package]
name = "starry-dex"
version = "0.2.7"
authors = ["mariinkys (kysdev.owjga@aleeas.com)"]
edition = "2024"
description = "A Pokédex application for the COSMIC™ desktop written in Rust"
readme = "https://github.com/mariinkys/starrydex/blob/main/README.md"
repository = "https://github.com/mariinkys/starrydex"
license = "GPL-3.0"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10.0"
open = "5.3.2"
rust-embed = "8.7.2"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["serde_derive"] }

rustemon = { version = "4.3.0" }
dirs = "6.0.0"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
memmap2 = "0.9.8"
anywho = "0.1.2"
rkyv = { version = "0.8.11", features = ["bytecheck"] }
bytecheck = "0.8.1"

[dependencies.i18n-embed]
version = "0.16.0"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    # About Page
    "about",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
