[package]
name = "starrydex"
version = "0.3.2"
authors = ["mariinkys (kysdev.owjga@aleeas.com)"]
edition = "2024"
license = "GPL-3.0"
description = "A Pokédex application for the COSMIC™ desktop"
repository = "https://github.com/mariinkys/starrydex"
readme = "https://github.com/mariinkys/starrydex/blob/main/README.md"

[[bin]]
path = "src/main.rs"
name = "starrydex"

[dependencies]
futures-util.workspace = true
i18n-embed-fl.workspace = true
open.workspace = true
rust-embed.workspace = true
tokio.workspace = true
serde.workspace = true
dirs.workspace = true
ron.workspace = true
tar.workspace = true
flate2.workspace = true
memmap2.workspace = true
anywho.workspace = true
rkyv.workspace = true
bytecheck.workspace = true

[workspace]
members = ["assetgen"]

[workspace.dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10.0"
open = "5.3.3"
rust-embed = "8.9.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["serde_derive"] }

# Added by me
dirs = "6.0.0"
ron = "0.12.0"
tar = "0.4.44"
flate2 = "1.1.5"
memmap2 = "0.9.9"
anywho = "0.1.2"
rkyv = { version = "0.8.12", features = ["bytecheck"] }
bytecheck = "0.8.2"

futures = "0.3.31"
rustemon = { version = "4.3.0" }
reqwest = { version = "0.12.25", features = ["json"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

[dependencies.i18n-embed]
version = "0.16.0"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
# codegen-units = 1
# Do a second optimization pass over the entire program, including dependenc.
# Slows compile times, marginal improvements.
lto = "thin"
