[package]
name = "assetgen"
version = "0.1.0"
edition = "2024"

[dependencies]
tar = "0.4.44"
flate2 = "1.1.2"
serde = { version = "1.0.225", features = ["serde_derive"] }
ron = "0.11.0"
rustemon = { version = "4.3.0" }
reqwest = "0.12.23"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
anywho = "0.1.2"
